# phantasm-hardware-interface

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindPackageHandleStandardArgs.cmake
src/phantasm-hardware-interface/: Backend.cc  Backend.hh  arguments.hh  commands.hh  config.hh  fwd.hh  gpu_info.cc  gpu_info.hh  handles.hh  limits.hh  primitive_pipeline_config.hh  types.hh  util.cc  util.hh  window_handle.hh
src/phantasm-hardware-interface/assets/: vertex_attrib_info.hh
src/phantasm-hardware-interface/common/: api.hh  byte_print.hh  byte_reader.hh  byte_util.hh  command_base.hh  command_reading.hh  common_fwd.hh  enums_from_string.hh  format_info_list.hh  format_size.hh  hash.cc  hash.hh  log.cc  log.hh  log_util.hh  page_allocator.hh  sse_hash.hh  sse_vec.hh  thread_association.cc  thread_association.hh  value_category.hh
src/phantasm-hardware-interface/common/container/: flat_vector.hh  linked_pool.cc  linked_pool.hh  stable_map.hh  trivial_capped_vector.hh  unique_buffer.cc  unique_buffer.hh
src/phantasm-hardware-interface/common/lib/: spirv_reflect.cc  spirv_reflect.hh
src/phantasm-hardware-interface/common/lib/SPIRV_reflect/: INFO.txt
src/phantasm-hardware-interface/d3d12/: Adapter.cc  Adapter.hh  BackendD3D12.cc  BackendD3D12.hh  Device.cc  Device.hh  Fence.cc  Fence.hh  Queue.cc  Queue.hh  Swapchain.cc  Swapchain.hh  adapter_choice_util.cc  adapter_choice_util.hh  cmd_list_translation.cc  cmd_list_translation.hh  fwd.hh  pipeline_state.cc  pipeline_state.hh  root_signature.cc  root_signature.hh  shader_table_construction.cc  shader_table_construction.hh
src/phantasm-hardware-interface/d3d12/common/: d3d12_fwd.hh  d3d12_sanitized.hh  d3dx12.hh  diagnostic_util.cc  diagnostic_util.hh  dxgi_format.hh  gpu_feature_info.hh  incomplete_state_cache.hh  log.hh  native_enum.hh  safe_seh_call.cc  safe_seh_call.hh  sdk_version.hh  shared_com_ptr.hh  util.cc  util.hh  verify.cc  verify.hh
src/phantasm-hardware-interface/d3d12/memory/: D3D12MA.cc  D3D12MA.hh  ResourceAllocator.cc  ResourceAllocator.hh
src/phantasm-hardware-interface/d3d12/pools/: accel_struct_pool.cc  accel_struct_pool.hh  cmd_list_pool.cc  cmd_list_pool.hh  cmdlist_translator_pool.cc  cmdlist_translator_pool.hh  event_pool.cc  event_pool.hh  fence_pool.cc  fence_pool.hh  linear_descriptor_allocator.cc  linear_descriptor_allocator.hh  pso_pool.cc  pso_pool.hh  query_pool.cc  query_pool.hh  resource_pool.cc  resource_pool.hh  root_sig_cache.cc  root_sig_cache.hh  shader_view_pool.cc  shader_view_pool.hh  swapchain_pool.cc  swapchain_pool.hh
src/phantasm-hardware-interface/debug/: BackendLog.cc  BackendLog.hh  type_reflection.hh
src/phantasm-hardware-interface/detail/: byte_util.hh  cache_map.hh  command_reading.hh  detail_fwd.hh  flat_map.hh  format_size.hh  gpu_info.cc  gpu_info.hh  gpu_stats.cc  gpu_stats.hh  hash.hh  incomplete_state_cache.hh  linked_pool.cc  linked_pool.hh  log.hh  log_util.cc  log_util.hh  lru_cache.hh  page_allocator.hh  renderdoc_loader.cc  renderdoc_loader.hh  stable_map.hh  thread_association.cc  thread_association.hh  trivial_capped_vector.hh  type_operators.hh  unique_buffer.cc  unique_buffer.hh  value_category.hh
src/phantasm-hardware-interface/features/: gpu_info.cc  gpu_info.hh  gpu_stats.cc  gpu_stats.hh
src/phantasm-hardware-interface/lib/: spirv_reflect.cc  spirv_reflect.hh
src/phantasm-hardware-interface/vulkan/: BackendVulkan.cc  BackendVulkan.hh  Device.cc  Device.hh  Swapchain.cc  Swapchain.hh  cmd_buf_translation.cc  cmd_buf_translation.hh  fwd.hh  gpu_choice_util.cc  gpu_choice_util.hh  layer_extension_util.cc  layer_extension_util.hh  pipeline_layout.cc  pipeline_layout.hh  queue_util.cc  queue_util.hh  render_pass_pipeline.cc  render_pass_pipeline.hh  shader.cc  shader.hh  shader_table_construction.cc  shader_table_construction.hh  surface_util.cc  surface_util.hh
src/phantasm-hardware-interface/vulkan/common/: debug_callback.cc  debug_callback.hh  diagnostic_util.cc  diagnostic_util.hh  log.hh  native_enum.hh  unique_name_set.hh  util.cc  util.hh  verify.cc  verify.hh  vk_format.hh  vk_incomplete_state_cache.hh
src/phantasm-hardware-interface/vulkan/loader/: platform_defines.hh  spirv_patch_util.cc  spirv_patch_util.hh  volk.cc  volk.hh  vulkan_fwd.hh
src/phantasm-hardware-interface/vulkan/loader/detail/: platform_defines.hh  volk.c  volk.h
src/phantasm-hardware-interface/vulkan/memory/: VMA.cc  VMA.hh
src/phantasm-hardware-interface/vulkan/pools/: accel_struct_pool.cc  accel_struct_pool.hh  cmd_list_pool.cc  cmd_list_pool.hh  cmdlist_translator_pool.cc  cmdlist_translator_pool.hh  event_pool.cc  event_pool.hh  fence_pool.cc  fence_pool.hh  pipeline_layout_cache.cc  pipeline_layout_cache.hh  pipeline_pool.cc  pipeline_pool.hh  query_pool.cc  query_pool.hh  render_pass_cache.cc  render_pass_cache.hh  resource_pool.cc  resource_pool.hh  shader_view_pool.cc  shader_view_pool.hh  swapchain_pool.cc  swapchain_pool.hh
src/phantasm-hardware-interface/vulkan/resources/: descriptor_allocator.cc  descriptor_allocator.hh  transition_barrier.cc  transition_barrier.hh
